@@ -1,15 +1,17 @@
 0.x
-  - (zathor) removed the embedded changelog. instead the changelog.txt will be opened (svn #1763)
+  - (zathor) 
 
 0.3.5.13
+  - (sharktooth) [x264Encoder] Removed unnecessary/wrong code
   - (sharktooth) [x264] Fixed commandline generation when switching between AVC profiles
-  - (sharktooth) [x264] Removed touhout tuning option
+  - (sharktooth) [x264] Removed touhou tuning option
   - (sharktooth) [x264] Fix commandline generation with tunings
   - (sharktooth) [x264] Fixed Psy-RD settings commandline generation with certain tunings
   - (sharktooth) [VideoPlayer] added a check to stop the player before reloading the video
   - (zathor) [Queue] if a worker tries to start an audio job while another
              audio job is already running the worker will be postponed.
   - (zathor) added overlay icon if a warning or error event has been logged (Windows 7 only)
+  - (zathor) removed the embedded changelog. instead the changelog.txt will be opened
 
 0.3.5.12
   - (zathor) [FileIndexer] disable DGIndexNV in a RDP session
